<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.sample.ui.home.HomeFragment"
        android:label="@string/menu_mainPage"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.sample.ui.home."
        android:label="@string/home_second"
        tools:layout="@layout/fragment_slideshow">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_calendarPage"
        android:name="com.example.sample.ui.CalendarPage.CalendarFragment"
        android:label="@string/menu_calendarPage"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_weatherPage"
        android:name="com.example.sample.ui.WeatherPage.WeatherFragment"
        android:label="@string/menu_weatherPage"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/nav_busPage"
        android:name="com.example.sample.ui.BusPage.BusFragment"
        android:label="@string/menu_busPage"
        tools:layout="@layout/fragment_bus" />

    <fragment
        android:id="@+id/nav_settingPage"
        android:name="com.example.sample.ui.SettingPage.SettingFragment"
        android:label="@string/menu_settingPage"
        tools:layout="@layout/fragment_slideshow" />
</navigation>